--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "dotenv-cli": "^8.0.0",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "nodemon": "^3.1.4"
